########  2013-1-11   #########
alter table shop_trades_mergetrade add column has_sys_err tinyint(1) NOT NULL;
########  2012-12-29  #########
CREATE UNIQUE INDEX uniq_item_outer_and_sku_id ON shop_memorule_composerule(outer_id,outer_sku_id);
########  2012-12-28  #########
alter table shop_users_user add column contacter varchar(32) NOT NULL;
alter table shop_users_user add column phone varchar(20) NOT NULL;
alter table shop_users_user add column mobile varchar(20) NOT NULL;
alter table shop_users_user add column area_code varchar(10) NOT NULL;
########  2012-12-12  #########
alter table shop_monitor_systemconfig drop is_confirm_delivery_auto;
########  2012-12-06  #########
alter table shop_trades_mergetrade drop year;
alter table shop_trades_mergetrade drop month;
alter table shop_trades_mergetrade drop day;
alter table shop_trades_mergetrade drop hour;
alter table shop_trades_mergetrade drop week;

alter table shop_trades_mergeorder drop year;
alter table shop_trades_mergeorder drop month;
alter table shop_trades_mergeorder drop day;
alter table shop_trades_mergeorder drop hour;
alter table shop_trades_mergeorder drop week;

create index outer_id_idx on shop_trades_mergeorder(outer_id);
create index outer_sku_id_idx on shop_trades_mergeorder(outer_sku_id);
########  2012-12-04  #########
alter table shop_trades_mergeorder add column gift_type int(11) NOT NULL;

########  2012-11-22  #########
alter table shop_orders_trade add column seller_flag int(11) DEFAULT NULL;
alter table shop_trades_mergetrade add column seller_flag int(11) DEFAULT NULL;
alter table shop_fenxiao_purchaseorder add column supplier_flag int(11) DEFAULT NULL;
########  2012-11-15  #########
alter table shop_trades_mergetrade add column has_out_stock tinyint(1) NOT NULL;
alter table shop_trades_mergetrade add column has_rule_match tinyint(1) NOT NULL;
alter table shop_trades_mergeorder add column out_stock tinyint(1) NOT NULL; 

alter table shop_users_user drop column update_items_datetime ;