@@ -9,3 +9,13 @@ class CheckOrderRenderer(TemplateRenderer):
     media_type = 'text/html'
     format = 'html'
     template = 'trades/check_order_template.html'
+    
+    
+class ReviewOrderRenderer(TemplateRenderer):
+    """
+    Renderer which serializes to Table
+    """
+    
+    media_type = 'text/html'
+    format = 'html'
+    template = 'trades/review_order_template.html'
