@@ -1,3 +1,7 @@
+########  2013-1-15   #########
+alter table shop_trades_mergetrade add column can_review tinyint(1) NOT NULL;
+########  2013-1-14   #########
+alter table shop_trades_mergeorder add column is_reverse_order tinyint(1) NOT NULL;
 ########  2013-1-11   #########
 alter table shop_trades_mergetrade add column has_sys_err tinyint(1) NOT NULL;
 ########  2012-12-29  #########
